--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,13 +1,11 @@
-version: "3.9"
-
 services:
   db:
     image: postgres:15-alpine
     restart: always
     environment:
-      POSTGRES_USER: user
-      POSTGRES_PASSWORD: password
-      POSTGRES_DB: sarendb
+      - POSTGRES_USER=user
+      - POSTGRES_PASSWORD=password
+      - POSTGRES_DB=sarendb
     volumes:
       - db_data:/var/lib/postgresql/data
     ports:
@@ -23,7 +21,6 @@ services:
       - ./backend/.env
     ports:
       - "8000:8000"
-    # Той же самий CMD, що й у Dockerfile:
     command: uvicorn app.main:app --host 0.0.0.0 --port 8000
 
   frontend:
